kubernetes_deploy/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  labels:
    io.kompose.service: mongo
  name: mongo
  namespace: applications
spec:
  selector:
    app: mongo
  type: LoadBalancer
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  loadBalancerIP: 192.168.1.103
  selector:
    io.kompose.service: mongo
