kubernetes_deploy/tumblr-app-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tumblr-app
  namespace: applications
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/tumblr-app: "true"
  podSelector:
    matchLabels:
      io.kompose.network/tumblr-app: "true"
